chore: setup prod build

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./src/server.ts",
   "scripts": {
+    "build": "tsc",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register ."
   },
   "author": "",
