--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "./src/server.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec ts-node -r tsconfig-paths/register ."
+    "dev": "nodemon --exec ts-node -r tsconfig-paths/register .",
+    "migrate:dev": "prisma migrate dev"
   },
   "author": "",
   "license": "ISC",
@@ -20,11 +21,16 @@
     "jest": "^29.7.0",
     "nodemon": "^3.0.1",
     "prettier": "^3.1.0",
+    "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "@prisma/client": "5.6.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "http-status": "^1.7.3",
+    "zod": "^3.22.4"
   }
 }
