--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "5.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "http-status": "^1.7.3",
     "zod": "^3.22.4"
   }
