fix: postgres password was different from README example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-DATABASE_URL="postgresql://dbuser:dbpassword@localhost:5432/databasename?schema=public"
+DATABASE_URL="postgresql://dbuser:dbpass@localhost:5432/databasename?schema=public"
 PORT=3000
