chore: deploy setup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "./src/server.ts",
   "scripts": {
-    "build": "tsc",
+    "prestart": "npx prisma migrate deploy",
+    "start": "node ./dist/server.js",
+    "build": "tsc --project tsconfig.json && tsc-alias -p tsconfig.json",
     "dev": "nodemon --exec ts-node -r tsconfig-paths/register -e ts .",
     "migrate:dev": "prisma migrate dev"
   },
@@ -24,6 +26,7 @@
     "prettier": "^3.1.0",
     "prisma": "^5.6.0",
     "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
   },
